<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    xmlns:adroid="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iconImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:isIndicator = "true" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="#DF0D0D"
            android:text="@string/price_placeholder"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:text="@string/buying"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>